# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-15 19:42:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-72


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:23:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-71

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-71


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:14:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-70

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-70


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:11:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-69

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-69


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:05:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary:
      Checkpointing work
    Revision:
      missingh--head--0.7--patch-68


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 17:00:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      Initial HVIO work
    Revision:
      missingh--head--0.7--patch-67


    new files:
     libsrc/MissingH/HVIO.hs

    modified files:
     ChangeLog


2004-12-15 15:44:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Deferring Gopher development for now
    Revision:
      missingh--head--0.7--patch-66


    new files:
     pending/.arch-ids/=id

    modified files:
     ChangeLog

    renamed files:
     libsrc/MissingH/Network/Gopher.hs
       ==> pending/Gopher.hs

    new directories:
     pending pending/.arch-ids


2004-12-14 23:00:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      preliminary gopher work